k8s/inference-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inference
  template:
    metadata:
      labels:
        app: inference
    spec:
      containers:
      - name: inference
        image: 559050217591.dkr.ecr.us-east-2.amazonaws.com/dev-inference-service:latest
        ports:
        - containerPort: 50051
