k8s/api-gateway-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 30080
