k8s/inference-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: inference
spec:
  type: ClusterIP
  selector:
    app: inference
  ports:
  - port: 50051
    targetPort: 50051
